# serde_slim

./: Cargo.toml
src/: lib.rs
tests/: basic.rs
