[package]
name = "serde_slim"
version = "0.1.0"
authors = ["Paul Lesur <gitconfig@lesurpaul.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
proc-macro2 = "0.4"
